Deprecate the non-component print functions and add more translatable strings

--- a/worldedit-core/src/main/resources/lang/strings.json
+++ b/worldedit-core/src/main/resources/lang/strings.json
@@ -2,8 +2,8 @@
     "worldedit.expand.description.vert": "Vertically expand the selection to world limits.",
     "worldedit.expand.expanded.singular": "Region expanded {0} block",
     "worldedit.expand.expanded.plural": "Region expanded {0} blocks",
-    "worldedit.expand.expanded.vert.singular": "Region expanded {0} block [top-to-bottom].",
-    "worldedit.expand.expanded.vert.plural": "Region expanded {0} blocks [top-to-bottom].",
+    "worldedit.expand.expanded.vert.singular": "Region expanded {0} block (top-to-bottom).",
+    "worldedit.expand.expanded.vert.plural": "Region expanded {0} blocks (top-to-bottom).",
 
     "worldedit.biomeinfo.lineofsight.singular": "Biome at line of sight point: {0}",
     "worldedit.biomeinfo.lineofsight.plural": "Biomes at line of sight point: {0}",
@@ -17,6 +17,12 @@
     "worldedit.brush.apply.shape": "The shape of the region",
     "worldedit.brush.apply.type": "Type of brush to use",
     "worldedit.brush.apply.item.warning": "This brush simulates item usages. Its effects may not work on all platforms, may not be undo-able, and may cause strange interactions with other mods/plugins. Use at your own risk.",
+    "worldedit.brush.paint.description": "Paint brush, apply a function to a surface",
+    "worldedit.brush.paint.size": "The size of the brush",
+    "worldedit.brush.paint.shape": "The shape of the region",
+    "worldedit.brush.paint.density": "The density of the brush",
+    "worldedit.brush.paint.type": "Type of brush to use",
+    "worldedit.brush.paint.item.warning": "This brush simulates item usages. Its effects may not work on all platforms, may not be undo-able, and may cause strange interactions with other mods/plugins. Use at your own risk.",
 
     "worldedit.setbiome.changed.singular": "Biomes were changed in {0} column. You may have to rejoin your game (or close and reopen your world) to see a change.",
     "worldedit.setbiome.changed.plural": "Biomes were changed in {0} columns. You may have to rejoin your game (or close and reopen your world) to see a change.",
@@ -77,6 +83,30 @@
     "worldedit.remove.removed.singular": "{0} entity has been marked for removal.",
     "worldedit.remove.removed.plural": "{0} entities have been marked for removal.",
 
+    "worldedit.paste.pasted": "The clipboard has been pasted at {0}",
+    "worldedit.rotate.no-interpolation": "Note: Interpolation is not yet supported, so angles that are multiples of 90 is recommended.",
+    "worldedit.rotate.rotated": "The clipboard copy has been rotated.",
+    "worldedit.flip.flipped": "The clipboard copy has been flipped.",
+    "worldedit.clearclipboard.cleared": "Clipboard cleared.",
+
+    "worldedit.unstuck.moved": "There you go!",
+    "worldedit.ascend.obstructed": "No free spot above you found.",
+    "worldedit.ascend.moved.singular": "Ascended a level.",
+    "worldedit.ascend.moved.plural": "Ascended {0} levels.",
+    "worldedit.descend.obstructed": "No free spot below you found.",
+    "worldedit.descend.moved.singular": "Descended a level.",
+    "worldedit.descend.moved.plural": "Descended {0} levels.",
+    "worldedit.ceil.obstructed": "No free spot above you found.",
+    "worldedit.ceil.moved": "Woosh!",
+    "worldedit.thru.obstructed": "No free spot ahead of you found.",
+    "worldedit.thru.moved": "Woosh!",
+    "worldedit.jumpto.moved": "Poof!",
+    "worldedit.jumpto.none": "No block in sight!",
+    "worldedit.up.obstructed": "You would hit something above you.",
+    "worldedit.up.moved": "Woosh!",
+
+    "worldedit.tool.repl.switched": "Replacer tool switched to: {0}",
+
     "worldedit.reload.config": "Configuration reloaded!",
     "worldedit.report.written": "WorldEdit report written to {0}",
     "worldedit.report.error": "Failed to write report: {0}",
@@ -84,6 +114,9 @@
     "worldedit.timezone.set": "Timezone set for this session to: {0}",
     "worldedit.timezone.current": "The current time in that timezone is: {0}",
     "worldedit.version.version": "WorldEdit version {0}",
+
+    "worldedit.command.time-elapsed": "{0}s elapsed.",
+    "worldedit.command.time-elapsed.verbose": "{0}s elapsed (history: {0} changed; {1} blocks/sec).",
 
     "worldedit.operation.affected.biome.singular": "{0} biome affected",
     "worldedit.operation.affected.biome.plural": "{0} biomes affected",
