Translated brush and tool lines

--- a/worldedit-core/src/main/resources/lang/strings.json
+++ b/worldedit-core/src/main/resources/lang/strings.json
@@ -23,6 +23,14 @@
     "worldedit.brush.paint.density": "The density of the brush",
     "worldedit.brush.paint.type": "Type of brush to use",
     "worldedit.brush.paint.item.warning": "This brush simulates item usages. Its effects may not work on all platforms, may not be undo-able, and may cause strange interactions with other mods/plugins. Use at your own risk.",
+    "worldedit.brush.sphere.equip": "Sphere brush shape equipped ({0}).",
+    "worldedit.brush.cylinder.equip": "Cylinder brush shape equipped ({0} by {1}).",
+    "worldedit.brush.clipboard.equip": "Clipboard brush shape equipped.",
+    "worldedit.brush.smooth.equip": "Smooth brush equipped ({0} x {1}x using {2}).",
+    "worldedit.brush.extinguish.equip": "Extinguisher equipped ({0}).",
+    "worldedit.brush.gravity.equip": "Gravity brush equipped ({0}).",
+    "worldedit.brush.butcher.equip": "Butcher brush equipped ({0}).",
+    "worldedit.brush.operation.equip": "Set brush to {0}.",
 
     "worldedit.setbiome.changed.singular": "Biomes were changed in {0} column. You may have to rejoin your game (or close and reopen your world) to see a change.",
     "worldedit.setbiome.changed.plural": "Biomes were changed in {0} columns. You may have to rejoin your game (or close and reopen your world) to see a change.",
@@ -108,30 +116,48 @@
     "worldedit.up.obstructed": "You would hit something above you.",
     "worldedit.up.moved": "Woosh!",
 
-    "worldedit.tool.repl.switched": "Replacer tool switched to: {0}",
-
     "worldedit.reload.config": "Configuration reloaded!",
     "worldedit.report.written": "WorldEdit report written to {0}",
     "worldedit.report.error": "Failed to write report: {0}",
+    "worldedit.report.callback": "WorldEdit report: {0}.report",
     "worldedit.timezone.invalid": "Invalid timezone",
     "worldedit.timezone.set": "Timezone set for this session to: {0}",
     "worldedit.timezone.current": "The current time in that timezone is: {0}",
     "worldedit.version.version": "WorldEdit version {0}",
 
     "worldedit.command.time-elapsed": "{0}s elapsed (history: {1} changed; {2} blocks/sec).",
+    "worldedit.pastebin.uploading": "(Please wait... sending output to pastebin...)",
 
     "worldedit.tool.max-block-changes": "Max blocks change limit reached.",
     "worldedit.tool.no-block": "No block in sight!",
+    "worldedit.tool.repl.equip": "Block replacer tool bound to {0}.",
+    "worldedit.tool.repl.switched": "Replacer tool switched to: {0}",
+    "worldedit.tool.data-cycler.equip": "Block data cycler tool bound to {0}.",
     "worldedit.tool.data-cycler.block-not-permitted": "You are not permitted to cycle the data value of that block.",
     "worldedit.tool.data-cycler.cant-cycle": "That block's data cannot be cycled!",
     "worldedit.tool.data-cycler.new-value": "Value of {0} is now {1}.",
     "worldedit.tool.data-cycler.cycling": "Now cycling {0}.",
+    "worldedit.tool.deltree.equip": "Floating tree remover tool bound to {0}.",
     "worldedit.tool.deltree.not-tree": "That's not a tree.",
     "worldedit.tool.deltree.not-floating": "That's not a floating tree.",
+    "worldedit.tool.tree.equip": "Tree tool bound to {0}.",
     "worldedit.tool.tree.obstructed": "A tree can't go there.",
+    "worldedit.tool.info.equip": "Info tool bound to {0}.",
     "worldedit.tool.info.blockstate.hover": "Block state",
     "worldedit.tool.info.internalid.hover": "Internal ID",
     "worldedit.tool.info.light.hover": "Block Light/Light Above",
+    "worldedit.tool.none.equip": "Tool unbound from your current item.",
+    "worldedit.tool.selwand.equip": "Selection wand bound to {0}.",
+    "worldedit.tool.navwand.equip": "Navigation wand bound to {0}.",
+    "worldedit.tool.floodfill.equip": "Block flood fill tool bound to {0}.",
+    "worldedit.tool.farwand.equip": "Far wand tool bound to {0}.",
+    "worldedit.tool.lrbuild.equip": "Long-range building tool bound to {0}.",
+    "worldedit.tool.lrbuild.set": "Left-click set to {0}; right-click set to {1}.",
+
+    "worldedit.superpickaxe.mode.single": "Mode is now single. Left click with a pickaxe. // to disable.",
+    "worldedit.superpickaxe.mode.area": "Mode is now area. Left click with a pickaxe. // to disable.",
+    "worldedit.superpickaxe.mode.recursive": "Mode is now recursive. Left click with a pickaxe. // to disable.",
+    "worldedit.superpickaxe.max-range": "Maximum range is {0}.",
 
     "worldedit.operation.affected.biome.singular": "{0} biome affected",
     "worldedit.operation.affected.biome.plural": "{0} biomes affected",
