--- a/worldedit-core/src/main/resources/lang/strings.json
+++ b/worldedit-core/src/main/resources/lang/strings.json
@@ -58,7 +58,28 @@
     "worldedit.searchitem.too-short": "Enter a longer search string (len > 2).",
     "worldedit.searchitem.b-and-i": "You cannot use both the 'b' and 'i' flags simultaneously.",
 
+    "worldedit.undo.undone": "Undid {0} available edits.",
+    "worldedit.undo.none": "Nothing left to undo.",
+    "worldedit.redo.undone": "Redid {0} available edits.",
+    "worldedit.redo.none": "Nothing left to redo.",
+    "worldedit.clearhistory.cleared": "History cleared.",
+
     "worldedit.raytrace.noblock": "No block in sight!",
+
+    "worldedit.restore.not-configured": "Snapshot/backup restore is not configured.",
+    "worldedit.restore.not-available": "That snapshot does not exist or is not available.",
+    "worldedit.restore.failed": "Failed to load snapshot: {0}",
+    "worldedit.restore.loaded": "Snapshot '{0}' loaded; now restoring...",
+    "worldedit.restore.restored": "Restored; {0} missing chunks and {1} other errors.",
+    "worldedit.restore.none-for-world": "No snapshots were found for this world.",
+    "worldedit.restore.none-found": "No snapshots were found.",
+    "worldedit.restore.none-found-console": "No snapshots were found. See console for details.",
+    "worldedit.restore.chunk-not-present": "Chunks were not present in snapshot.",
+    "worldedit.restore.chunk-load-failed": "No chunks could be loaded. (Bad archive?)",
+    "worldedit.restore.block-place-failed": "Errors prevented any blocks from being restored.",
+    "worldedit.restore.block-place-error": "Last error: {0}",
+
+    "worldedit.snapshot.use.newest": "Now using newest snapshot.",
 
     "worldedit.drain.drained.singular": "{0} block has been drained.",
     "worldedit.drain.drained.plural": "{0} blocks have been drained.",
@@ -88,8 +109,11 @@
     "worldedit.extinguish.removed.plural": "{0} fires have been extinguished.",
     "worldedit.butcher.killed.singular": "{0} mob has been killed in a radius of {1}.",
     "worldedit.butcher.killed.plural": "{0} mobs have been killed in a radius of {1}.",
+    "worldedit.butcher.explain-all": "Use -1 to remove all mobs in loaded chunks",
     "worldedit.remove.removed.singular": "{0} entity has been marked for removal.",
     "worldedit.remove.removed.plural": "{0} entities have been marked for removal.",
+    "worldedit.remove.explain-all": "Use -1 to remove all entities in loaded chunks",
+    "worldedit.calc.invalid": "'{0}' could not be parsed as a valid expression",
 
     "worldedit.paste.pasted": "The clipboard has been pasted at {0}",
     "worldedit.rotate.no-interpolation": "Note: Interpolation is not yet supported, so angles that are multiples of 90 is recommended.",
@@ -127,6 +151,7 @@
 
     "worldedit.command.time-elapsed": "{0}s elapsed (history: {1} changed; {2} blocks/sec).",
     "worldedit.pastebin.uploading": "(Please wait... sending output to pastebin...)",
+    "worldedit.session.cant-find-session": "Unable to find session for {0}",
 
     "worldedit.tool.max-block-changes": "Max blocks change limit reached.",
     "worldedit.tool.no-block": "No block in sight!",
